# crusty-handmade

./: Cargo.toml  README.md  watch-game.bat
crusty_handmade/: Cargo.toml
crusty_handmade/src/: lib.rs  types.rs
src/: audio.rs  crusty_handmade.rs  main.rs  ring_buffer.rs  x_input.rs
src/crusty_handmade/: mod.rs  types.rs
src/platform/: mod.rs
src/platform/windows/: mod.rs  win32main.rs  x_input.rs
src/utility/: audio.rs  mod.rs  ring_buffer.rs
utility/: Cargo.toml
utility/src/: audio.rs  lib.rs  ring_buffer.rs
