[package]
name = "rust-handmade"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.2"
itertools = "0.11.0"
windows = { version = "0.51.0", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media_Audio_DirectSound" ] }
