[workspace]
resolver = "2"
members = ["crusty_handmade", "utility"]

[package]
name = "rust-handmade"
version = "0.1.0"
edition = "2021"

[dependencies]
hot-lib-reloader = "^0.6"
crusty_handmade = { path = "crusty_handmade" }
utility = { path = "utility" }
windows = { version = "0.51.0", features = ["Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_Foundation", "Win32_System_Com", "Win32_System_Performance", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_Media", "Win32_Media_Audio_DirectSound", "Win32_Media_Multimedia" ] }
